--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,8 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = ">=3.7,<4.0"
-cookiecutter = ">=1.7"
+#cookiecutter = ">=1.7"
+cookiecutter = { git = 'https://github.com/christokur/cookiecutter.git', branch = '2.1.1' }
 gitpython = ">=3.0"
 toml = { version = ">=0.10", optional = true, python = "<3.11" }
 typer = ">=0.4.0"
