--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ typer = ">=0.4.0"
 click = ">= 7.1.2"
 #examples = {version = ">=1.0.2", optional = true}
 importlib-metadata = {version = ">=2.0.0,<5.0.0", python = "<3.8"}
+packaging = ">=21.3"
 
 [tool.poetry.extras]
 pyproject = ["toml"]
