--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = ">=3.7,<4.0"
 #cookiecutter = ">=1.7"
-cookiecutter = { git = 'https://github.com/christokur/cookiecutter.git', branch = '2.1.1.post1' }
+cookiecutter = { git = 'https://github.com/christokur/cookiecutter.git', tag = '2.1.1.post1' }
 gitpython = ">=3.0"
 toml = { version = ">=0.10", optional = true, python = "<3.11" }
 typer = ">=0.4.0"
