--- a/pyproject.toml
+++ b/pyproject.toml
@@ -53,7 +53,7 @@ name = "material"
 palette = {primary = "orange", accent = "cyan"}
 
 [tool.cruft]
-skip = ["cruft/__init__.py", "tests"]
+skip = ["cruft/__init__.py", "tests", "poetry.toml"]
 
 [build-system]
 requires = ["poetry-core>=1.0.8"]
