--- a/pyproject.toml
+++ b/pyproject.toml
@@ -67,7 +67,6 @@ invoke = "1.7.3"
 pip = "~23.2.1"
 poetry = "~1.5.1"
 poethepoet = "~0.21.1"
-python-toolbag = "~0.18.5"
 bandit = ">=1.6"
 black = ">=22.12.0"
 examples = { version = '>=1.0.2', python = '>=3.7.0,<4.0'}
@@ -87,6 +86,7 @@ pytest-mock = ">=3.3.1"
 pep8-naming = ">=0.8.2"
 portray = { version = '>=1.7.0', python = '>=3.7.0,<4.0'}
 vulture = ">=1.0"
+"rpds-py" = "==0.9.2"
 
 [tool.poetry.group.test]
 optional = true
