--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ requires = [
 
 [tool.poetry]
 name = "cruft"
-version = "2.12.0post3"
+version = "2.12.0post4"
 description = "Allows you to maintain all the necessary cruft for packaging and building projects separate from the code you intentionally write. Built on-top of CookieCutter."
 authors = [ "Timothy Crosley <timothy.crosley@gmail.com>" ]
 license = "MIT"
@@ -30,6 +30,7 @@ classifiers = [
     "Topic :: Software Development",
     "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
 ]
 keywords = [ "cookiecutter","Python","projects","project templates","Jinja2","skeleton","scaffolding","project directory","package","packaging",]
 packages = [
@@ -53,7 +54,7 @@ priority = "default"
 generate-setup-file = false
 
 [tool.poetry.dependencies]
-python = ">=3.9.16,<3.11.0"
+python = ">=3.9.16,<3.12.0"
 cookiecutter = "~2.1.1post3"
 gitpython = ">=3.0"
 toml = { version = ">=0.10", optional = true, python = "<3.11" }
@@ -338,7 +339,7 @@ args = [
 
 [tool.commitizen]
 name = "cz_conventional_commits"
-version = "2.12.0post3"
+version = "2.12.0post4"
 version_files = [
     ".bumpversion.cfg",
     "VERSION",
