--- a/.github/workflows/build-test-publish.yml
+++ b/.github/workflows/build-test-publish.yml
@@ -13,7 +13,7 @@ jobs:
     strategy:
       matrix:
         # Put the version we consider mainline and publish with last
-        python-version: ["3.8", "3.9", "3.10", "3.11"]
+        python-version: ["3.10", "3.11"]
         os: [ubuntu-latest]
     runs-on: ${{ matrix.os }}
     env:
@@ -40,7 +40,7 @@ jobs:
       run: |
         echo python-path:'${{ steps.setup_python.outputs.python-path }}'
         ${{ steps.setup_python.outputs.python-path }} --version
-        ${{ steps.setup_python.outputs.python-path }} -m pip install poetry==1.5.1
+        ${{ steps.setup_python.outputs.python-path }} -m pip install poetry==1.6.0
       shell: bash
 
     - name: Self-Configure AWS Credentials
