--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ requires = [
 
 [tool.poetry]
 name = "cruft"
-version = "2.12.0post9"
+version = "2.12.0post10"
 description = "Allows you to maintain all the necessary cruft for packaging and building projects separate from the code you intentionally write. Built on-top of CookieCutter."
 authors = [ "Timothy Crosley <timothy.crosley@gmail.com>" ]
 license = "MIT"
@@ -57,7 +57,7 @@ generate-setup-file = false
 
 [tool.poetry.dependencies]
 python = ">=3.10.13,<3.12.0"
-cookiecutter = "~2.1.1post6"
+cookiecutter = "~2.2.0post1"
 gitpython = ">=3.0"
 toml = { version = ">=0.10", optional = true, python = "<3.11" }
 typer = ">=0.4.0"
@@ -66,10 +66,11 @@ importlib-metadata = {version = ">=2.0.0,<5.0.0", python = "<3.8"}
 packaging = ">=21.3"
 
 [tool.poetry.group.dev.dependencies]
-invoke = "1.7.3"
-pip = "~23.2.1"
-poetry = "~1.6.0"
-poethepoet = "~0.22.0"
+invoke = "~2.2.0"
+pip = "~23.3.1"
+poetry = "~1.6.1"
+poethepoet = "~0.24.0"
+# tox_enable: 'False'
 "rpds-py" = "==0.9.2"
 bandit = ">=1.6"
 black = ">=22.12.0"
@@ -110,7 +111,7 @@ gitlint = { version = '~0.19.1' }
 pre-commit = { version = '~2.21.0' }
 prompt-toolkit = "~3.0.28"
 pyproject-fmt = { version = '~0.13.0' }
-ruff = ">=0.0.292"
+ruff = ">=0.1.1"
 semver = ">=3.0.0,<4.0.0"
 
 [tool.poetry.group.docs]
@@ -220,6 +221,10 @@ extend-ignore = "E203"
 [tool.pytest.ini_options]
 testpaths = [ "cruft", "tests",  ]
 addopts = ["--doctest-modules"]
+norecursedirs = [
+    "build",
+    "dist",
+]
 
 [tool.coverage.run]
 command_line = "-m pytest --doctest-modules"
@@ -305,6 +310,7 @@ help = "Do a few lint checks"
 shell = """
 [ -z 'crufttests' ] || {
 coverage run -m pytest --doctest-modules cruft tests;
+[ 0 -eq $? ] || { echo 'Tests failed'; exit 1; };
 coverage combine;
 coverage lcov -o coverage/lcov.info;
 coverage report;
@@ -338,7 +344,7 @@ args = [
 
 [tool.commitizen]
 name = "cz_conventional_commits"
-version = "2.12.0post9"
+version = "2.12.0post10"
 version_files = [
     ".bumpversion.cfg",
     "VERSION",
