--- a/pyproject.toml
+++ b/pyproject.toml
@@ -76,7 +76,7 @@ poethepoet = "~0.24.0"
 bandit = ">=1.6"
 black = ">=22.12.0"
 examples = { version = '>=1.0.2', python = '>=3.7.0,<4.0'}
-flake8 = "<5.0.0,>=4.0.0"
+flake8 = ">=4.0.0,<7.0.0"
 flake8-bugbear = ">=19.8"
 ipython = ">=7.16.3"
 isort = ">=5.11.0"
