--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ requires = [
 
 [tool.poetry]
 name = "cruft"
-version = "2.12.0post14"
+version = "2.12.0post5"
 description = "Allows you to maintain all the necessary cruft for packaging and building projects separate from the code you intentionally write. Built on-top of CookieCutter."
 authors = [ "Timothy Crosley <timothy.crosley@gmail.com>" ]
 license = "MIT"
@@ -36,7 +36,7 @@ exclude = [
     ".bumpversion.cfg",
 ]
 packages = [
-    { include = "cruft" },
+    { include = "cruft" }
 ]
 
 [tool.poetry.scripts]
@@ -57,12 +57,11 @@ generate-setup-file = false
 
 [tool.poetry.dependencies]
 python = ">=3.10.13,<3.12.0"
-python-toolbag = "~0.23.5"
-cookiecutter = "~2.2.0post4"
+cookiecutter = "~2.2.0post5"
 gitpython = ">=3.0"
 toml = { version = ">=0.10", optional = true, python = "<3.11" }
 typer = ">=0.4.0"
-click = ">= 7.1.2"
+click = ">= 8.1.3"
 importlib-metadata = {version = ">=2.0.0,<5.0.0", python = "<3.8"}
 packaging = ">=21.3"
 
@@ -74,12 +73,12 @@ poethepoet = "~0.24.0"
 # tox_enable: 'False'
 "rpds-py" = "==0.9.2"
 bandit = ">=1.6"
-black = ">=22.12.0"
+black = { version = '~24.2.0', extras = ['d']}
 examples = { version = '>=1.0.2', python = '>=3.7.0,<4.0'}
 flake8 = ">=4.0.0,<7.0.0"
 flake8-bugbear = ">=19.8"
 ipython = ">=7.16.3"
-isort = ">=5.11.0"
+isort = { version = '~5.13.2' }
 mkdocs = ">=1.2"
 mypy = ">=0.971"
 pep8-naming = ">=0.8.2"
@@ -89,6 +88,7 @@ pytest-cov = ">=3.0"
 pytest-mock = ">=3.3.1"
 pytest-repeat = ">=0.9.1"
 pytest-xdist = ">=2.5.0"
+python-toolbag = {{cookiecutter.python_toolbag_version}}
 safety = ">=1.8"
 types-toml = ">=0.10"
 vulture = ">=1.0"
@@ -150,8 +150,6 @@ skip-string-normalization = true
 [tool.ruff]
 builtins = ["_"]
 cache-dir = "~/.cache/ruff"
-# Allow unused variables when underscore-prefixed.
-dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
 # Exclude a variety of commonly ignored directories.
 exclude = [
     ".bzr",
@@ -178,35 +176,39 @@ exclude = [
 ]
 # In addition to the standard set of exclusions, omit all tests, plus a specific file.
 extend-exclude = ["debug"]
-# Allow autofix for all enabled rules (when `--fix`) is provided.
-fixable = ["A", "ANN", "ARG", "B", "BLE", "C", "COM", "D", "DTZ", "E", "EM", "ERA", "EXE", "F", "FBT", "G", "I", "ICN", "INP", "ISC", "N", "PD", "PGH", "PIE", "PL", "PT", "PTH", "Q", "RET", "RUF", "S", "SIM", "T", "TCH", "TID", "TRY", "UP", "W", "YTT"]
 # Group violations by containing file.
 output-format = "pylint"
-ignore = [ "ANN002", "ANN003", "ANN101", "D211","D213", "S101", "T20", "EM101", "EM102", "ERA001", "D417", "BLE001", "RET504", "UP038", "D212", "D407" ]
 # Same as Black.
 line-length = 120
-per-file-ignores = {}
 # By default, always enumerate fixed violations.
 show-fixes = true
 # By default, always show source code snippets.
-show-source = false
+# show-source = false
 # Allow imports relative to the "src" and "test" directories.
 src = ["cruft", "tests", ]
+target-version = "py310"
+
+[tool.ruff.lint]
+# Allow unused variables when underscore-prefixed.
+dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
+# Allow autofix for all enabled rules (when `--fix`) is provided.
+fixable = ["A", "ANN", "ARG", "B", "BLE", "C", "COM", "D", "DTZ", "E", "EM", "ERA", "EXE", "F", "FBT", "G", "I", "ICN", "INP", "ISC", "N", "PD", "PGH", "PIE", "PL", "PT", "PTH", "Q", "RET", "RUF", "S", "SIM", "T", "TCH", "TID", "TRY", "UP", "W", "YTT"]
+ignore = [ "ANN002", "ANN003", "ANN101", "D211","D213", "S101", "T20", "EM101", "EM102", "ERA001", "D417", "BLE001", "RET504", "UP038", "D212", "D407" ]
+per-file-ignores = {}
 # Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
 # "FBT", "TRY",
 select = ["A", "ANN", "ARG", "B", "BLE", "C", "COM", "D", "DTZ", "E", "EM", "ERA", "EXE", "F", "G", "I", "ICN", "INP", "ISC", "N", "PD", "PGH", "PIE", "PL", "PT", "PTH", "Q", "RET", "RUF", "S", "SIM", "T", "TCH", "TID", "UP", "W", "YTT"]
-unfixable = []
 task-tags = ["TODO", "FIXME"]
-target-version = "py310"
+unfixable = []
 
-[tool.ruff.flake8-annotations]
+[tool.ruff.lint.flake8-annotations]
 allow-star-arg-any = true
 
-[tool.ruff.mccabe]
+[tool.ruff.lint.mccabe]
 # Unlike Flake8, default to a complexity level of 10.
 max-complexity = 10
 
-[tool.ruff.pylint]
+[tool.ruff.lint.pylint]
 max-args = 10
 
 [tool.isort]
@@ -286,7 +288,7 @@ pule = { sequence = ["pu", "locks", "exports"], help = "Poetry update and export
 exports = { sequence = ["export", "export-dev"], help = "Do things to export" }
 formats = { sequence = ["isort", "black"], help = "Run checks" }
 locks = { sequence = ["set-lock", "check-lock"], help = "Manage poetry.lock" }
-ruff = { shell = "[ -z 'crufttests' ] || { ruff check cruft tests; }", help = "Ruff linter" }
+ruff = { shell = "[ -z 'crufttests' ] || { poe formats; ruff check cruft tests; }", help = "Ruff linter" }
 ruff-noqa = { shell = "[ -z 'crufttests' ] || { ruff check --select RUF --fix cruft tests; }", help = "Ruff linter fix noqa" }
 ruff-watch = { shell = "[ -z 'crufttests' ] || { poe formats; ruff check --watch cruft tests; }", help = "Ruff linter in watch mode" }
 ruff-fix = { shell = "[ -z 'crufttests' ] || { ruff check --fix-only cruft tests; }", help = "Ruff linter fixes" }
@@ -313,8 +315,8 @@ shell = """
 coverage run -m pytest --doctest-modules cruft tests;
 [ 0 -eq $? ] || { echo 'Tests failed'; exit 1; };
 coverage combine;
-coverage lcov -o coverage/lcov.info;
-coverage report;
+coverage html -d coverage;
+coverage report --show-missing ;
 }
 """
 help = "Check test coverage"
@@ -345,7 +347,7 @@ args = [
 
 [tool.commitizen]
 name = "cz_conventional_commits"
-version = "2.12.0post14"
+version = "2.12.0post5"
 version_files = [
     ".bumpversion.cfg",
     "VERSION",
