--- a/pyproject.toml
+++ b/pyproject.toml
@@ -88,7 +88,6 @@ pytest-cov = ">=3.0"
 pytest-mock = ">=3.3.1"
 pytest-repeat = ">=0.9.1"
 pytest-xdist = ">=2.5.0"
-python-toolbag = {{cookiecutter.python_toolbag_version}}
 safety = ">=1.8"
 types-toml = ">=0.10"
 vulture = ">=1.0"
@@ -113,6 +112,7 @@ prompt-toolkit = "~3.0.28"
 pyproject-fmt = { version = '~0.13.0' }
 ruff = ">=0.1.1"
 semver = ">=3.0.0,<4.0.0"
+python-toolbag = ">=0.23.22"
 
 [tool.poetry.group.docs]
 optional = true
