--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ requires = [
 
 [tool.poetry]
 name = "cruft"
-version = "2.12.0post15"
+version = "2.12.0post16"
 description = "Allows you to maintain all the necessary cruft for packaging and building projects separate from the code you intentionally write. Built on-top of CookieCutter."
 authors = [ "Timothy Crosley <timothy.crosley@gmail.com>" ]
 license = "MIT"
@@ -47,17 +47,22 @@ Homepage = "https://github.com/cookiecutter/cookiecutter"
 Documentation = "https://cruft.docs.infra-area2.com/"
 Changelog = "https://github.com/cookiecutter/cookiecutter/blob/main/CHANGELOG.md"
 
+
 [[tool.poetry.source]]
 name = "codeartifact"
 url = "https://artifacts-433714148419.d.codeartifact.us-east-2.amazonaws.com/pypi/pypi/simple/"
-priority = "default"
+#priority = "primary"
+
+[[tool.poetry.source]]
+name = "pypi"
+priority = "supplemental"
 
 [tool.poetry.build]
 generate-setup-file = false
 
 [tool.poetry.dependencies]
-python = ">=3.10.13,<3.12.0"
-cookiecutter = "~2.2.0post5"
+python = ">=3.11.8,<3.13.0"
+cookiecutter = "~2.2.0post6"
 gitpython = ">=3.0"
 toml = { version = ">=0.10", optional = true, python = "<3.11" }
 typer = ">=0.4.0"
@@ -67,10 +72,10 @@ packaging = ">=21.3"
 
 [tool.poetry.group.dev.dependencies]
 invoke = "~2.2.0"
-pip = "~23.3.1"
-poetry = "~1.6.1"
+pip = "~24.2"
+poetry = "~1.8.3"
 poethepoet = "~0.24.0"
-python-toolbag = ">=0.23.22"
+#python-toolbag = ">=0.23.22"
 # tox_enable: 'False'
 "rpds-py" = "==0.9.2"
 bandit = ">=1.6"
@@ -83,7 +88,8 @@ isort = { version = '~5.13.2' }
 mkdocs = ">=1.2"
 mypy = ">=0.971"
 pep8-naming = ">=0.8.2"
-portray = ">=1.7.0"
+portray = { git = "https://github.com/christokur/portray.git", branch = "main" }
+pdocs = { git = "https://github.com/christokur/pdocs.git", branch = "master" }
 pytest = ">=6.2.5"
 pytest-cov = ">=3.0"
 pytest-mock = ">=3.3.1"
@@ -105,13 +111,13 @@ pytest-stub = "~1.1.0"
 optional = true
 
 [tool.poetry.group.local-dev.dependencies]
-bump2version = "~1.0.2-beta4"
+bump2version = "~1.0.2-beta6"
 commitizen = { version = '~2.42.1' }
 gitlint = { version = '~0.19.1' }
 pre-commit = { version = '~2.21.0' }
 prompt-toolkit = "~3.0.28"
 pyproject-fmt = { version = '~0.13.0' }
-python-toolbag = ">=0.23.22"
+#python-toolbag = ">=0.23.22"
 ruff = ">=0.1.1"
 semver = ">=3.0.0,<4.0.0"
 
@@ -121,8 +127,6 @@ optional = true
 [tool.poetry.group.docs.dependencies]
 #mkdocs = "~1.4.2"
 #portray = "~1.8.0"
-pdocs = { git = "https://github.com/christokur/pdocs.git", branch = "master" }
-portray = { git = "https://github.com/christokur/portray.git", branch = "main" }
 mkdocs-material = { version = ">=8.5.0,<9.0.0" }
 mdx-include = { version = ">=1.4.1,<2.0.0" }
 mkdocs-markdownextradata-plugin = { version = ">=0.1.7,<0.3.0" }
@@ -348,7 +352,7 @@ args = [
 
 [tool.commitizen]
 name = "cz_conventional_commits"
-version = "2.12.0post15"
+version = "2.12.0post16"
 version_files = [
     ".bumpversion.cfg",
     "VERSION",
