--- a/cicd/rc/configure_aws_credentials.rc
+++ b/cicd/rc/configure_aws_credentials.rc
@@ -20,6 +20,12 @@ function aws_check_environment_secrets() {
 }
 
 function aws_configure_profile() {
+    export nounset=$(
+      shopt                 -o nounset > /dev/null
+      echo $?
+    )                                                      || true
+    [ 1 -eq $nounset ] || { set +o nounset; }
+
     [ ! -z "$AWS_PROFILE" ] || { echo "No AWS_PROFILE given!";  return 1; }
     [ ! -z "$AWS_ACCESS_KEY_ID" ] || { echo "No AWS_ACCESS_KEY_ID given!"; return 2; }
     [ ! -z "$AWS_SECRET_ACCESS_KEY" ] || { echo "No AWS_SECRET_ACCESS_KEY given!"; return 3; }
@@ -36,23 +42,27 @@ function aws_configure_profile() {
     export PAGER=''
     aws --version
 
-    source_profile=${1:-$AWS_SOURCE_PROFILE}
-    aws configure set output json --profile=$AWS_PROFILE 2>&1
-    aws configure set region ${AWS_DEFAULT_REGION:-us-east-2} --profile=$AWS_PROFILE 2>&1
-    if [ ! -z "$source_profile" ] ; then
-        aws configure set role_arn $AWS_ROLE_ARN --profile=$AWS_PROFILE 2>&1
-        aws configure set source_profile $source_profile --profile=$AWS_PROFILE 2>&1
-    else
-        aws configure set aws_access_key_id ${AWS_ACCESS_KEY_ID} --profile=$AWS_PROFILE 2>&1
-        aws configure set aws_secret_access_key ${AWS_SECRET_ACCESS_KEY} --profile=$AWS_PROFILE 2>&1
-        test -z "${AWS_SESSION_TOKEN}" || aws configure set aws_session_token ${AWS_SESSION_TOKEN} --profile=$AWS_PROFILE 2>&1
-    fi
+	  [ -z "$PROFILES_ALWAYS_CREATE" -a ! -z "$(aws configure list-profiles | egrep -e "^$AWS_PROFILE$" 2>/dev/null)" ] || {
+			source_profile=${1:-$AWS_SOURCE_PROFILE}
+			aws configure set output json --profile=$AWS_PROFILE 2>&1
+			aws configure set region ${AWS_DEFAULT_REGION:-us-east-2} --profile=$AWS_PROFILE 2>&1
+			if [ ! -z "$source_profile" ] ; then
+					aws configure set role_arn $AWS_ROLE_ARN --profile=$AWS_PROFILE 2>&1
+					aws configure set source_profile $source_profile --profile=$AWS_PROFILE 2>&1
+			else
+					aws configure set aws_access_key_id ${AWS_ACCESS_KEY_ID} --profile=$AWS_PROFILE 2>&1
+					aws configure set aws_secret_access_key ${AWS_SECRET_ACCESS_KEY} --profile=$AWS_PROFILE 2>&1
+					test -z "${AWS_SESSION_TOKEN}" || aws configure set aws_session_token ${AWS_SESSION_TOKEN} --profile=$AWS_PROFILE 2>&1
+			fi
+		}
     aws sts get-caller-identity --profile=$AWS_PROFILE 2>&1
     #set +x
     [ 0 -eq $UNSET_AWS_ACCOUNT_TOOLS ] || unset AWS_ACCOUNT_TOOLS
     [ 0 -eq $UNSET_AWS_ACCOUNT_ID ] || unset AWS_ACCOUNT_ID
     [ 0 -eq $UNSET_AWS_REGION_TOOLS ] || unset AWS_REGION_TOOLS
     [ 0 -eq $UNSET_AWS_ROLE_ARN ] || unset AWS_ROLE_ARN
+
+    [ 1 -eq $nounset ] || { set -o nounset; }
     return $?
 }
 
