--- a/.github/workflows/build-test-publish.yml
+++ b/.github/workflows/build-test-publish.yml
@@ -8,6 +8,10 @@ on:
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
+permissions:
+  id-token: write # This is required for requesting the JWT
+  contents: read  # This is required for actions/checkout
+
 jobs:
   build-and-publish:
     strategy:
@@ -18,14 +22,12 @@ jobs:
     runs-on: ${{ matrix.os }}
     env:
       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-      AWS_SESSION_TOKEN: ${{ secrets.AWS_SESSION_TOKEN }}
-      CI_AWS_ACCESS_KEY_ID: ${{ secrets.CI_AWS_ACCESS_KEY_ID }}
-      CI_AWS_SECRET_ACCESS_KEY: ${{ secrets.CI_AWS_SECRET_ACCESS_KEY }}
       AWS_REGION_TOOLS: "us-east-2"
       AWS_ACCOUNT_TOOLS: "433714148419"
+      AWS_PROFILE_TOOLS: "cloud-services-prod"
       PYTHON_KEYRING_BACKEND: keyring.backends.null.Keyring
+      JIRA_API_KEY: ${{ secrets.JIRA_API_KEY }}
+      JIRA_USERNAME: ${{ secrets.JIRA_USERNAME }}
     steps:
     - uses: actions/checkout@v4
       with:
@@ -47,45 +49,63 @@ jobs:
         ${{ steps.setup_python.outputs.python-path }} -m pip install poetry==1.8.3
       shell: bash
 
-    - name: Self-Configure AWS Credentials
+    - name: configure-aws-credentials
+      uses: SandsB2B/configure-aws-credentials-action@v0.1.0
+      with:
+        role_name: "github-codeartifact-readwrite"
+        account_id: "433714148419"
+        aws_region: "us-east-2"
+        aws_profile: "cloud-services-prod"
+
+    - name: Check AWS profiles
       continue-on-error: false
       run: |
-        set +e
-        [ type aws_configure_profile 2>/dev/null ] || . $GITHUB_WORKSPACE/cicd/rc/configure_aws_credentials.rc
-        aws_check_environment_secrets
+        set  +e
+        aws configure list-profiles
+        aws sts get-caller-identity --profile=$AWS_PROFILE_TOOLS
 
-        aws_configure_base_profiles
-        export AWS_PROFILE_TOOLS=cloud-services-prod
-        aws_configure_profiles_and_accounts
-
-        # For CodeArtifact and in case the consumer does not include in the custom list
-        aws_check_profiles_and_accounts $AWS_PROFILE_TOOLS:${AWS_ACCOUNT_TOOLS:-$AWS_ACCOUNT_ID}
-
-        export PAGER=''
-        aws --version
-        set | grep '^(AWS_|GITHUB_|RUNNER_)'
-
-        aws sts get-caller-identity 2>&1
-
-        aws configure list-profiles 2>&1
-
+        set | egrep -e '^(AWS_|CI_)'
       shell: bash
+
+#    - name: Configure additional AWS Credentials
+#      continue-on-error: false
+#      run: |
+#        set +e
+#        [ type aws_configure_profile 2>/dev/null ] || . $GITHUB_WORKSPACE/cicd/rc/configure_aws_credentials.rc
+#        aws_check_environment_secrets
+#
+#        # For CodeArtifact and in case the consumer does not include in the custom list
+#        aws_check_profiles_and_accounts $AWS_PROFILE_TOOLS:${AWS_ACCOUNT_TOOLS}
+#      shell: bash
 
     - name: Set up access to CodeArtifact
       run: |
         [ type aws_setup_codeartifact_access 2>/dev/null ] || . $GITHUB_WORKSPACE/cicd/rc/configure_aws_codeartifact.rc
-        export AWS_PROFILE_TOOLS=cloud-services-prod
         aws_setup_codeartifact_access
       shell: bash
 
     - name: Install dependencies and build
       run: |
         #poetry env use ${{ matrix.python-version }}
+        poetry check --lock
         poetry config --list
         poetry install --with dev --no-ansi --no-interaction
         pip list
-        python -m pip install build
-        python -m build --sdist --wheel --outdir dist/ .
+      shell: bash
+
+    - name: Component and Versions
+      run: |
+        #export LOG_LEVEL=DEBUG
+
+        export DEBUG=yes
+        export VERBOSE=yes
+        python3 $GITHUB_WORKSPACE/scripts/jira-component-and-version.py
+      shell: bash
+
+    - name: Test coverage
+      run: |
+        poetry env info
+        poetry run poe test-cov
       shell: bash
 
     - name: Publish
